# docker-autocompose

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
