[project]
name = "docker-autocompose"
version = "1.3.1"
description = "Generate a docker-compose yaml definition from a running container"
authors = [{ name = "ScottJWalter" }]
requires-python = ">=3.8"
readme = "README.md"
license = "GPLv2"
keywords = [
    "docker",
    "yaml",
    "container",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pyaml~=24.9.0",
    "docker~=7.1.0",
]

[project.urls]
Homepage = "https://github.com/ScottJWalter/docker-autocompose"
Repository = "https://github.com/ScottJWalter/docker-autocompose.git"
Documentation = "https://github.com/ScottJWalter/docker-autocompose/blob/master/README.md"

[project.scripts]
autocompose = "src.autocompose:main"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
